Transferred project to the correct repository

--- a/about.html
+++ b/about.html
@@ -23,34 +23,13 @@
         <nav>
             <ul>
                 <li><a href="gender-selection.html" class="cta nav-cta">Jackets</a></li>
-                <li><a href="about.html" class="cta nav-cta">About</a></li>
+                <li><a href="about.html" class="cta nav-cta active">About</a></li>
                 <li><a href="contact.html" class="cta nav-cta">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main class="home_page">
-        <section class="gender-selection-small">
-            <div>
-                <a href="jackets-women.html"><img src="assets/women-small.png" class="small-gender_images"><span>Women</span></a>
-            </div>
-            <div>
-                <a href="jackets-men.html"><img src="assets/men-small.png" class="small-gender_images"><span>Men</span></a>
-            </div>
-        </section>
-        <section class="introduction-home">
-            <span id="content1">Durable and comfortable</span><span>jackets for any weather!</span>
-        </section>
-        <section class="home-page_buttons">
-            <div class="browse">
-                <a href="gender-selection.html" class="cta cta-browse">Browse</a>
-            </div>
-            <div class="home-about_button">
-                <a href="about.html" class="cta">About</a>
-            </div>
-            <div class="home-contact_button">
-                <a href="contact.html" class="cta">Contact</a>
-            </div>
-        </section>
+    <main>
+        <h1>Work in progress</h1>
     </main>
     <footer>
         <p>Copyright©</p>
