--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get durable, comfortable and versatile jackets from Rainydays">
     <link href="css/styles.css" rel="stylesheet">
-    <title>Rainydays | Welcome</title>
+    <title>Rainydays | Home</title>
 </head>
 <body>
     <header>
         <section class="header-items_top">
             <div class="back_button">
-                <a href="*"><img src="assets/Back Button.png"></a>
+                <a href="*"><img src="assets/back-button.png"></a>
             </div>
             <div class="logo">
                 <a href="index.html"><img src="assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
