Seperate CSS files and more
- Added seperate CSS files for each page
- Added variables.css
- Added media.css
- Added "alt text" for images on home page
- HTML: Removed section from the header, and replaced it with div container

--- a/html/gender-selection.html
+++ b/html/gender-selection.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get durable, comfortable and versatile jackets from Rainydays">
-    <link href="css/styles.css" rel="stylesheet">
-    <title>Rainydays | Welcome</title>
+    <link href="../css/styles.css" rel="stylesheet">
+    <link href="../css/gender-selection.css" rel="stylesheet">
+    <link href="../css/media.css" rel="stylesheet">
+    <title>Rainydays | Jackets</title>
 </head>
 <body>
     <header>
         <section class="header-items_top">
             <div class="back_button">
-                <a href="*"><img src="assets/Back Button.png"></a>
+                <a href="*"><img src="../assets/Back Button.png"></a>
             </div>
             <div class="logo">
-                <a href="index.html"><img src="assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
+                <a href="../index.html"><img src="../assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
             </div>
             <div class="checkout-button">
-                <a href="checkout.html"><img src="assets/cart.png" alt="checkout icon"><span>Checkout</span></a>
+                <a href="checkout.html"><img src="../assets/cart.png" alt="checkout icon"><span>Checkout</span></a>
             </div>
         </section>
         <nav>
