--- a/html/checkout.html
+++ b/html/checkout.html
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get durable, comfortable and versatile jackets from Rainydays">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
+    <link href="../css/checkout.css" rel="stylesheet">
+    <link href="../css/media.css" rel="stylesheet">
     <title>Rainydays | Welcome</title>
 </head>
 <body>
     <header>
         <section class="header-items_top">
             <div class="back_button">
-                <a href="*"><img src="assets/Back Button.png"></a>
+                <a href="*"><img src="../assets/Back Button.png"></a>
             </div>
             <div class="logo">
-                <a href="index.html"><img src="assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
+                <a href="../index.html"><img src="../assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
             </div>
             <div class="checkout-button">
-                <a href="checkout.html"><img src="assets/cart.png" alt="checkout icon"><span>Checkout</span></a>
+                <a href="checkout.html"><img src="../assets/cart.png" alt="checkout icon"><span>Checkout</span></a>
             </div>
         </section>
         <nav>
             <ul>
-                <li><a href="gender-selection.html" class="cta nav-cta active">Jackets</a></li>
+                <li><a href="gender-selection.html" class="cta nav-cta">Jackets</a></li>
                 <li><a href="about.html" class="cta nav-cta">About</a></li>
                 <li><a href="contact.html" class="cta nav-cta">Contact</a></li>
             </ul>
