--- a/index.html
+++ b/index.html
@@ -5,36 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get durable, comfortable and versatile jackets from Rainydays">
     <link href="css/styles.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+    <link href="css/media.css" rel="stylesheet">
     <title>Rainydays | Home</title>
 </head>
 <body>
     <header>
-        <section class="header-items_top">
+        <div class="header-container">
             <div class="back_button">
-                <a href="*"><img src="assets/back-button.png"></a>
+                <a href="#"><img src="assets/back-button.png" alt="Back button"></a>
             </div>
             <div class="logo">
                 <a href="index.html"><img src="assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
             </div>
             <div class="checkout-button">
-                <a href="checkout.html"><img src="assets/cart.png" alt="checkout icon"><span>Checkout</span></a>
+                <a href="html/checkout.html"><img src="assets/cart.png" alt="checkout icon"><span>Checkout</span></a>
             </div>
-        </section>
-        <nav>
+        </div>
+        <nav class="nav-home_page">
             <ul>
-                <li><a href="gender-selection.html" class="cta nav-cta">Jackets</a></li>
-                <li><a href="about.html" class="cta nav-cta">About</a></li>
-                <li><a href="contact.html" class="cta nav-cta">Contact</a></li>
+                <li><a href="html/gender-selection.html" class="cta nav-cta">Jackets</a></li>
+                <li><a href="html/about.html" class="cta nav-cta">About</a></li>
+                <li><a href="html/contact.html" class="cta nav-cta">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main class="home_page">
         <section class="gender-selection-small">
             <div>
-                <a href="jackets-women.html"><img src="assets/women-small.png" class="small-gender_images"><span>Women</span></a>
+                <a href="html/jackets-women.html"><img src="assets/women-small.png" class="small-gender_images" alt="Jackets for women"><span>Women</span></a>
             </div>
             <div>
-                <a href="jackets-men.html"><img src="assets/men-small.png" class="small-gender_images"><span>Men</span></a>
+                <a href="html/jackets-men.html"><img src="assets/men-small.png" class="small-gender_images" alt="Jackets for men"><span>Men</span></a>
             </div>
         </section>
         <section class="introduction-home">
@@ -42,13 +44,13 @@
         </section>
         <section class="home-page_buttons">
             <div class="browse">
-                <a href="gender-selection.html" class="cta cta-browse">Browse</a>
+                <a href="html/gender-selection.html" class="cta cta-browse">Browse</a>
             </div>
             <div class="home-about_button">
-                <a href="about.html" class="cta">About</a>
+                <a href="html/about.html" class="cta">About</a>
             </div>
             <div class="home-contact_button">
-                <a href="contact.html" class="cta">Contact</a>
+                <a href="html/contact.html" class="cta">Contact</a>
             </div>
         </section>
     </main>
