--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Get durable, comfortable and versatile jackets from Rainydays">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="../css/styles.css" rel="stylesheet">
+    <link href="../css/jacket-specific-page.css" rel="stylesheet">
+    <link href="../css/media.css" rel="stylesheet">
     <title>Rainydays | Welcome</title>
 </head>
 <body>
