Added jacket pages and formatted images

--- a/html/jackets-women.html
+++ b/html/jackets-women.html
@@ -1,40 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get durable, comfortable and versatile jackets from Rainydays">
-    <link href="../css/styles.css" rel="stylesheet">
-    <link href="../css/jackets-women.css" rel="stylesheet">
-    <link href="../css/media.css" rel="stylesheet">
-    <title>Rainydays | Welcome</title>
-</head>
-<body>
-    <header>
-        <section class="header-items_top">
-            <div class="back_button">
-                <a href="*"><img src="assets/Back Button.png"></a>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Get durable, comfortable and versatile jackets from Rainydays">
+        <link href="../css/styles.css" rel="stylesheet">
+        <link href="../css/jackets-women.css" rel="stylesheet">
+        <link href="../css/media.css" rel="stylesheet">
+        <title>Rainydays | Women</title>
+    </head>
+    <body>
+        <header>
+            <div class="header-container">
+                <div class="back_button">
+                    <a href="*"><img src="../assets/Back Button.png"></a>
+                </div>
+                <div class="logo">
+                    <a href="../index.html"><img src="../assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
+                </div>
+                <div class="checkout-button">
+                    <a href="checkout.html"><img src="../assets/cart.png" class="cart-icon" alt="checkout icon"><span>Cart</span></a>
+                </div>
             </div>
-            <div class="logo">
-                <a href="../index.html"><img src="../assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
-            </div>
-            <div class="checkout-button">
-                <a href="checkout.html"><img src="../assets/cart.png" alt="checkout icon"><span>Checkout</span></a>
-            </div>
-        </section>
-        <nav>
-            <ul>
-                <li><a href="gender-selection.html" class="cta nav-cta active">Jackets</a></li>
-                <li><a href="about.html" class="cta nav-cta">About</a></li>
-                <li><a href="contact.html" class="cta nav-cta">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <h1>Work in progress</h1>
-    </main>
-    <footer>
-        <p>Copyright©</p>
-    </footer>
-</body>
+            <nav>
+                <ul>
+                    <li><a href="gender-selection.html" class="cta nav-cta active">Jackets</a></li>
+                    <li><a href="about.html" class="cta nav-cta">About</a></li>
+                    <li><a href="contact.html" class="cta nav-cta">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section class="main-headings">
+                <h1>Jackets</h1>
+                <h2>Women</h2>
+            </section>
+            <section class="main-content product-list">
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_01.jpg" class="jackets-listed" alt="Jacket model 01"></a>
+                    <h3>Jacket model 01</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_02.jpg" class="jackets-listed" alt="Jacket model 02"></a>
+                    <h3>Jacket model 02</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_03.jpg" class="jackets-listed" alt="Jacket model 03"></a>
+                    <h3>Jacket model 03</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_04.jpg" class="jackets-listed" alt="Jacket model 04"></a>
+                    <h3>Jacket model 04</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_05.jpg" class="jackets-listed" alt="Jacket model 05"></a>
+                    <h3>Jacket model 05</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_02.jpg" class="jackets-listed" alt="Jacket model 06"></a>
+                    <h3>Jacket model 06</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_01.jpg" class="jackets-listed" alt="Jacket model 07"></a>
+                    <h3>Jacket model 07</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_04.jpg" class="jackets-listed" alt="Jacket model 08"></a>
+                    <h3>Jacket model 08</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_03.jpg" class="jackets-listed" alt="Jacket model 09"></a>
+                    <h3>Jacket model 09</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+            </section>
+        </main>
+        <footer>
+            <p>Copyright©</p>
+        </footer>
+    </body>
 </html>
