--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="index.html"><img src="assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
             </div>
             <div class="checkout-button">
-                <a href="html/checkout.html"><img src="assets/cart.png" alt="checkout icon"><span>Checkout</span></a>
+                <a href="html/checkout.html"><img src="assets/cart.png" class="cart-icon" alt="checkout icon"><span>Cart</span></a>
             </div>
         </div>
         <nav class="nav-home_page">
@@ -47,10 +47,10 @@
                 <a href="html/gender-selection.html" class="cta cta-browse">Browse</a>
             </div>
             <div class="home-about_button">
-                <a href="html/about.html" class="cta">About</a>
+                <a href="html/about.html" class="cta cta-about">About</a>
             </div>
             <div class="home-contact_button">
-                <a href="html/contact.html" class="cta">Contact</a>
+                <a href="html/contact.html" class="cta cta-contact">Contact</a>
             </div>
         </section>
     </main>
