--- a/html/gender-selection.html
+++ b/html/gender-selection.html
@@ -7,21 +7,22 @@
     <link href="../css/styles.css" rel="stylesheet">
     <link href="../css/gender-selection.css" rel="stylesheet">
     <link href="../css/media.css" rel="stylesheet">
+    <link href="../css/media-gender_selection.css" rel="stylesheet">
     <title>Rainydays | Jackets</title>
 </head>
-<body>
+<body class="gender-selection_body">
     <header>
-        <section class="header-items_top">
+        <div class="header-container">
             <div class="back_button">
-                <a href="*"><img src="../assets/Back Button.png"></a>
+                <a href="#"><img src="assets/Back Button.png"></a>
             </div>
             <div class="logo">
                 <a href="../index.html"><img src="../assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
             </div>
             <div class="checkout-button">
-                <a href="checkout.html"><img src="../assets/cart.png" alt="checkout icon"><span>Checkout</span></a>
+                <a href="checkout.html"><img src="../assets/cart.png" class="cart-icon" alt="checkout icon"><span>Cart</span></a>
             </div>
-        </section>
+        </div>
         <nav>
             <ul>
                 <li><a href="gender-selection.html" class="cta nav-cta active">Jackets</a></li>
@@ -30,8 +31,15 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Work in progress</h1>
+    <main class="gender-selection-main">
+        <div class="gender-selection">
+            <a href="../html/jackets-women.html"><img src="../assets/gender-selection-women.jpg" class="gender-selection-images" alt="Woman with jacket"></a>
+            <a href="../html/jackets-women.html" class="gender-selection-link"><h1>Women</h1></a>
+        </div>
+        <div class="gender-selection">
+            <a href="../html/jackets-men.html"><img src="../assets/gender-selection-men.jpg" class="gender-selection-images gender-selection-images_men" alt="Man with jacket"></a>
+            <a href="../html/jackets-men.html" class="gender-selection-link"><h1>Men</h1></a>
+        </div>
     </main>
     <footer>
         <p>Copyright©</p>
