--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -19,7 +19,7 @@
                 <a href="index.html"><img src="assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
             </div>
             <div class="checkout-button">
-                <a href="checkout.html"><img src="assets/cart.png" alt="checkout icon"><span>Checkout</span></a>
+                <a href="checkout.html"><img src="assets/cart.png" class="cart-icon" alt="checkout icon"><span>Cart</span></a>
             </div>
         </section>
         <nav>
