jacket specific page finished

--- a/html/jackets-women.html
+++ b/html/jackets-women.html
@@ -37,55 +37,55 @@
             </section>
             <section class="main-content product-list">
                 <div class="products">
-                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_01.jpg" class="jackets-listed" alt="Jacket model 01"></a>
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_01.jpg" class="jackets-listed_image" alt="Jacket model 01"></a>
                     <h3>Jacket model 01</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
-                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_02.jpg" class="jackets-listed" alt="Jacket model 02"></a>
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_02.jpg" class="jackets-listed_image" alt="Jacket model 02"></a>
                     <h3>Jacket model 02</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
-                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_03.jpg" class="jackets-listed" alt="Jacket model 03"></a>
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_03.jpg" class="jackets-listed_image" alt="Jacket model 03"></a>
                     <h3>Jacket model 03</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
-                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_04.jpg" class="jackets-listed" alt="Jacket model 04"></a>
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_04.jpg" class="jackets-listed_image" alt="Jacket model 04"></a>
                     <h3>Jacket model 04</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
-                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_05.jpg" class="jackets-listed" alt="Jacket model 05"></a>
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_05.jpg" class="jackets-listed_image" alt="Jacket model 05"></a>
                     <h3>Jacket model 05</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
-                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_02.jpg" class="jackets-listed" alt="Jacket model 06"></a>
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_02.jpg" class="jackets-listed_image" alt="Jacket model 06"></a>
                     <h3>Jacket model 06</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
-                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_01.jpg" class="jackets-listed" alt="Jacket model 07"></a>
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_01.jpg" class="jackets-listed_image" alt="Jacket model 07"></a>
                     <h3>Jacket model 07</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
-                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_04.jpg" class="jackets-listed" alt="Jacket model 08"></a>
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_04.jpg" class="jackets-listed_image" alt="Jacket model 08"></a>
                     <h3>Jacket model 08</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
-                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_03.jpg" class="jackets-listed" alt="Jacket model 09"></a>
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-woman_03.jpg" class="jackets-listed_image" alt="Jacket model 09"></a>
                     <h3>Jacket model 09</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
