--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -11,27 +11,61 @@
 </head>
 <body>
     <header>
-        <section class="header-items_top">
+        <div class="header-container">
             <div class="back_button">
-                <a href="*"><img src="assets/Back Button.png"></a>
+                <a href="#"><img src="assets/Back Button.png"></a>
             </div>
             <div class="logo">
-                <a href="index.html"><img src="assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
+                <a href="../index.html"><img src="../assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
             </div>
             <div class="checkout-button">
-                <a href="checkout.html"><img src="assets/cart.png" class="cart-icon" alt="checkout icon"><span>Cart</span></a>
+                <a href="../html/checkout.html"><img src="../assets/cart.png" class="cart-icon" alt="checkout icon"><span>Cart</span></a>
             </div>
-        </section>
+        </div>
         <nav>
             <ul>
-                <li><a href="gender-selection.html" class="cta nav-cta">Jackets</a></li>
-                <li><a href="about.html" class="cta nav-cta">About</a></li>
-                <li><a href="contact.html" class="cta nav-cta">Contact</a></li>
+                <li><a href="../html/gender-selection.html" class="cta nav-cta">Jackets</a></li>
+                <li><a href="../html/about.html" class="cta nav-cta">About</a></li>
+                <li><a href="../html/contact.html" class="cta nav-cta">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Work in progress</h1>
+        <section class="main-headings">
+            <h1>Jacket model 01</h1>
+        </section>
+        <div class="main-content jacket-specific-container">
+            <div class="jacket-specific">
+                <img src="../images/jacket-men_01.jpg" class="jacket-specific_image" alt="jacket model 01">
+            </div>
+            <div class="jacket-specific">
+                <h2>About this item</h2>
+                <p>Quality jacket with exceptional comfort and durability. 
+                Lightweight and sporty for varied use. 
+                The jacket is produced sustainably in our local factories, using reusable material.</p>    
+                <p class="price">Price: <span>£99.00</span></p> 
+                <a href="#" class="cta add-to-cart_button">Add to Cart</a>
+                <a href="../html/checkout.html" class="cta buy-now_button">Buy Now</a>
+            </div>
+        </div>
+        <section class="main-content similar-items-container">
+            <h2>Similar items:</h2>
+            <div class="similar-items">
+                <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_02.jpg" class="similar-items_image" alt="jacket model 02"><h3>Jacket model 02</h3><p class="similar-items_price">Price: £99.00</p></a>
+            </div>
+            <div class="similar-items">
+                <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_03.jpg" class="similar-items_image" alt="jacket model 03"><h3>Jacket model 03</h3><p class="similar-items_price">Price: £99.00</p></a>
+            </div>
+            <div class="similar-items">
+                <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_04.jpg" class="similar-items_image" alt="jacket model 04"><h3>Jacket model 04</h3><p class="similar-items_price">Price: £99.00</p></a>
+            </div>
+            <div class="similar-items">
+                <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_05.jpg" class="similar-items_image" alt="jacket model 05"><h3>Jacket model 05</h3><p class="similar-items_price">Price: £99.00</p></a>
+            </div>
+            <div class="similar-items">
+                <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_06.jpg" class="similar-items_image" alt="jacket model 06"><h3>Jacket model 06</h3><p class="similar-items_price">Price: £99.00</p></a>
+            </div>
+        </section>
     </main>
     <footer>
         <p>Copyright©</p>
