About page added

--- a/html/about.html
+++ b/html/about.html
@@ -30,8 +30,18 @@
             </ul>
         </nav>
     </header>
-    <main>
-        <h1>Work in progress</h1>
+    <main class="main-content">
+        <h1>About</h1>
+        <h2 class="about_h2">Durability</h2>
+        <p class="about_text">Rainydays jackets are designed with high quality
+            materials to ensure great durability for use in any 
+            activity.</p>
+        <h2 class="about_h2">Comfort</h2>
+        <p class="about_text">Comfort is in the forefront of Rainydays mind when
+            it comes to designing jackets.</p>
+        <h2 class="about_h2">Versatility</h2>
+        <p class="about_text">Jackets by Rainydays are made in such a way that
+            they can be used for all sorts of activities.</p>
     </main>
     <footer>
         <p>Copyright©</p>
