--- a/html/jackets-men.html
+++ b/html/jackets-men.html
@@ -38,55 +38,73 @@
             <section class="main-content product-list">
                 <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_01.jpg" class="jackets-listed_image" alt="Jacket model 01"></a>
-                    <h3>Jacket model 01</h3>
+                    <h3>Jacket 01</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_02.jpg" class="jackets-listed_image" alt="Jacket model 02"></a>
-                    <h3>Jacket model 02</h3>
+                    <h3>Jacket 02</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_03.jpg" class="jackets-listed_image" alt="Jacket model 03"></a>
-                    <h3>Jacket model 03</h3>
+                    <h3>Jacket 03</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_04.jpg" class="jackets-listed_image" alt="Jacket model 04"></a>
-                    <h3>Jacket model 04</h3>
+                    <h3>Jacket 04</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_05.jpg" class="jackets-listed_image" alt="Jacket model 05"></a>
-                    <h3>Jacket model 05</h3>
+                    <h3>Jacket 05</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_06.jpg" class="jackets-listed_image" alt="Jacket model 06"></a>
-                    <h3>Jacket model 06</h3>
+                    <h3>Jacket 06</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_01.jpg" class="jackets-listed_image" alt="Jacket model 07"></a>
-                    <h3>Jacket model 07</h3>
+                    <h3>Jacket 07</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_02.jpg" class="jackets-listed_image" alt="Jacket model 08"></a>
-                    <h3>Jacket model 08</h3>
+                    <h3>Jacket 08</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
                 <div class="products">
                     <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_03.jpg" class="jackets-listed_image" alt="Jacket model 09"></a>
-                    <h3>Jacket model 09</h3>
+                    <h3>Jacket 09</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_04.jpg" class="jackets-listed_image" alt="Jacket model 10"></a>
+                    <h3>Jacket 09</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_05.jpg" class="jackets-listed_image" alt="Jacket model 11"></a>
+                    <h3>Jacket 09</h3>
+                    <p class="price">Price: £99.00</p>
+                    <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
+                </div>
+                <div class="products">
+                    <a href="../products/jacket-specific-page.html"><img src="../images/jacket-men_06.jpg" class="jackets-listed_image" alt="Jacket model 12"></a>
+                    <h3>Jacket 09</h3>
                     <p class="price">Price: £99.00</p>
                     <a href="../products/jacket-specific-page.html" class="cta cta-show_item">Show item</a>
                 </div>
