--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -40,7 +40,7 @@
             </div>
             <div class="jacket-specific">
                 <h2>About this item</h2>
-                <p>Quality jacket with exceptional comfort and durability. 
+                <p class="jacket-specific_description">Quality jacket with exceptional comfort and durability. 
                 Lightweight and sporty for varied use. 
                 The jacket is produced sustainably in our local factories, using reusable material.</p>    
                 <p class="price">Price: <span>£99.00</span></p> 
