Changes made to gender selection links and images

--- a/html/gender-selection.html
+++ b/html/gender-selection.html
@@ -33,12 +33,12 @@
     </header>
     <main class="gender-selection-main">
         <div class="gender-selection">
-            <a href="../html/jackets-women.html"><img src="../assets/gender-selection-women.jpg" class="gender-selection-images" alt="Woman with jacket"></a>
-            <a href="../html/jackets-women.html" class="gender-selection-link"><h1>Women</h1></a>
+            <a href="../html/jackets-women.html"><img src="../assets/gender-selection-women.jpg" class="gender-selection-images gender-selection-images_women" alt="Woman with jacket"></a>
+            <a href="../html/jackets-women.html" class="gender-selection-link"><h1 id="women_h1">Women</h1></a>
         </div>
         <div class="gender-selection">
-            <a href="../html/jackets-men.html"><img src="../assets/gender-selection-men.jpg" class="gender-selection-images gender-selection-images_men" alt="Man with jacket"></a>
-            <a href="../html/jackets-men.html" class="gender-selection-link"><h1>Men</h1></a>
+            <a href="../html/jackets-men.html"><img src="../assets/gender-selection-men.jpg" class="gender-selection-images" alt="Man with jacket"></a>
+            <a href="../html/jackets-men.html" class="gender-selection-link"><h1 id="men_h1">Men</h1></a>
         </div>
     </main>
     <footer>
