--- a/index.html
+++ b/index.html
@@ -31,18 +31,18 @@
         </nav>
     </header>
     <main class="home_page">
-        <section class="gender-selection-small">
+        <div class="container-gender-selection-small">
             <div>
-                <a href="html/jackets-women.html"><img src="assets/women-small.png" class="small-gender_images" alt="Jackets for women"><span>Women</span></a>
+                <a href="html/jackets-women.html"><img src="assets/gender-selection-women.jpg" class="small-gender_images" alt="Jackets for women"><span>Women</span></a>
             </div>
             <div>
-                <a href="html/jackets-men.html"><img src="assets/men-small.png" class="small-gender_images" alt="Jackets for men"><span>Men</span></a>
+                <a href="html/jackets-men.html"><img src="assets/gender-selection-men.jpg" class="small-gender_images" alt="Jackets for men"><span>Men</span></a>
             </div>
-        </section>
-        <section class="introduction-home">
+        </div>
+        <div class="introduction-home">
             <span id="content1">Durable and comfortable</span><span>jackets for any weather!</span>
-        </section>
-        <section class="home-page_buttons">
+        </div>
+        <div class="home-page_buttons">
             <div class="browse">
                 <a href="html/gender-selection.html" class="cta cta-browse">Browse</a>
             </div>
@@ -52,7 +52,7 @@
             <div class="home-contact_button">
                 <a href="html/contact.html" class="cta cta-contact">Contact</a>
             </div>
-        </section>
+        </div>
     </main>
     <footer>
         <p>Copyright©</p>
