--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -13,7 +13,7 @@
     <header>
         <div class="header-container">
             <div class="back_button">
-                <a href="#"><img src="assets/Back Button.png"></a>
+                <a href="#"><img src="assets/Back_Button.png" alt="Back button"></a>
             </div>
             <div class="logo">
                 <a href="../index.html"><img src="../assets/rainydays_Logo.png" class="rainydays-logo_image" alt="Rainydays logo"></a>
