Contact page finished

--- a/html/checkout-success.html
+++ b/html/checkout-success.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section class="main-content">
-            <h1 id="checkout-success_h1">Checkout Success!</h1>
+            <h1 class="checkout-success_h1">Checkout Success!</h1>
             <div>
                 <img src="../assets/check-mark.png" class="check-mark_icon" alt="Check mark icon">
             </div>
