--- a/html/checkout.html
+++ b/html/checkout.html
@@ -33,7 +33,7 @@
     </header>
     <main>
         <section class="main-content">
-            <h1>Checkout</h1>
+            <h1 class="checkout_h1">Checkout</h1>
             <div class="checkout_items">
                 <img src="../images/jacket-men_01.jpg" class="checkout_image" alt="Jacket model 01">
                 <div>                
