--- a/html/checkout.html
+++ b/html/checkout.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get durable, comfortable and versatile jackets from Rainydays">
+    <meta name="description" content="All items added to your cart">
     <link href="../css/styles.css" rel="stylesheet">
     <link href="../css/checkout.css" rel="stylesheet">
     <link href="../css/media.css" rel="stylesheet">
     <link href="../css/media-checkout.css" rel="stylesheet">
-    <title>Rainydays | Welcome</title>
+    <title>Rainydays | Cart</title>
 </head>
 <body>
     <header>
