--- a/html/gender-selection.html
+++ b/html/gender-selection.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get durable, comfortable and versatile jackets from Rainydays">
+    <meta name="description" content="Select what gender to browse jackets for">
     <link href="../css/styles.css" rel="stylesheet">
     <link href="../css/gender-selection.css" rel="stylesheet">
     <link href="../css/media.css" rel="stylesheet">
