--- a/products/jacket-specific-page.html
+++ b/products/jacket-specific-page.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Get durable, comfortable and versatile jackets from Rainydays">
+    <meta name="description" content="Buy jacket model 01">
     <link href="../css/styles.css" rel="stylesheet">
     <link href="../css/jacket-specific-page.css" rel="stylesheet">
     <link href="../css/media.css" rel="stylesheet">
-    <title>Rainydays | Welcome</title>
+    <title>Rainydays | Jacket model 01</title>
 </head>
 <body>
     <header>
